kustomizations/streaming/dispatcharr/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dispatcharr
spec:
  rules:
  - host: dispatcharr.citocafecito.work
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dispatcharr
              port:
                number: 9191
